# goose

./: Cargo.toml
crates/goose-cli/src/: main.rs
crates/goose-cli/src/commands/: configure.rs
crates/goose/extensions/advanced_computer_controller/: Cargo.toml
crates/goose/extensions/advanced_computer_controller/src/: lib.rs
