[package]
name = "advanced_computer_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.57", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Foundation"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
screenshot = "0.2"  # For cross-platform screenshots

